<resources>
    <string name="app_name">PasswordManager</string>
    <string name="password_name_text">PASSWORD NAME:</string>
    <string name="user_name_hint">USERNAME:</string>
    <string name="password_hint">PASSWORD:</string>
    <string name="password_generate_button_label">generate</string>
    <string name="password_generate_show_button_label">show</string>
    <string name="username">username</string>
    <string name="Note">Note</string>
    <string name="password">password</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="save">SAVE</string>
    <string name="edit_account">Edit Account</string>
    <string name="account_title">Account title</string>
    <string name="url">URL</string>
    <string name="user_name">User Name</string>
    <string name="generate">Generate</string>
    <string name="show">Show</string>
    <string name="cancel">Cancel</string>
    <string name="lowercase_switch_label">Lowercase</string>
    <string name="uppercase_switch_label">Uppercase</string>
    <string name="number_switch_label">Number</string>
    <string name="special_character_switch_label">Special Character</string>
    <string name="button_label_generate">generate</string>
    <string name="button_label_confirm">confirm</string>
    <string name="button_label_show">Show</string>
    <string name="button_label_hide">Hide</string>
    <string name="button_label_confirm_account">Confirm</string>
    <string name="title_label_add_account">Add Account</string>
    <string name="title_edittext_hint">Title</string>
    <string name="title_edittext_url_optional">URL (optional)</string>
    <string name="title_edittext_username">Username</string>
    <string name="button_label_cancel">Cancel</string>
    <string name="title_edittext_notes_optional">Notes (optional)</string>
    <string name="title_text_generated_password">Generated password:</string>
    <string name="gen_password_filler">123456789</string>
    <string name="text_password_length">Password Length: 8</string>
</resources>