<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordRandomGeneration">

    <TextView
        android:id="@+id/password_random_text_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/title_text_generated_password"
        android:textAlignment="center"
        android:textSize="@dimen/large_text_font_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password_random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/gen_password_filler"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_random_text_hint" />

    <Switch
        android:id="@+id/lower_case_label"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="100dp"
        android:checked="true"
        android:text="@string/lowercase_switch_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_random_text_hint" />

    <Switch
        android:id="@+id/upper_case_label"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginEnd="24dp"
        android:text="@string/uppercase_switch_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/lower_case_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/number_label"
        android:layout_width="169dp"
        android:layout_height="55dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:checked="true"
        android:text="@string/number_switch_label"
        app:layout_constraintEnd_toStartOf="@+id/special_character_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lower_case_label" />

    <Switch
        android:id="@+id/special_character_label"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginEnd="24dp"
        android:text="@string/special_character_switch_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/number_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/generate_new_pw_button"
        android:layout_width="169dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:onClick="generateRandomPassword"
        android:text="@string/button_label_generate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/confirm_pw_button"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/button_label_confirm"
        app:layout_constraintBaseline_toBaselineOf="@+id/generate_new_pw_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="confirmPasswordGenerated"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/number_label">

        <TextView
            android:id="@+id/password_length_hint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/text_password_length"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_label" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/password_gen_length_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:progress="8"
            android:max="20"
            android:min="6"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>