<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_account"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_add_account"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:text="@string/title_label_add_account"
            android:textAllCaps="false"
            android:textSize="36sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:gravity="center"
            android:layout_marginTop="36dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/title_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/title_input_editext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:hint="@string/title_edittext_hint"
                android:drawableEnd="@drawable/ic_baseline_cancel_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/url_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/url_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:hint="@string/title_edittext_url_optional"
                android:drawableEnd="@drawable/ic_baseline_cancel_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:hint="@string/title_edittext_username"
                android:drawableEnd="@drawable/ic_baseline_cancel_24" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/Password"
                android:drawableEnd="@drawable/ic_baseline_cancel_24" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <TextView-->
<!--            android:id="@+id/title"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Account title"-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

<!--        <EditText-->
<!--            android:id="@+id/title_edit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:ems="10"-->
<!--            android:inputType="textUri" />-->


<!--        <TextView-->
<!--            android:id="@+id/url"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="URL"-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

<!--        <EditText-->
<!--            android:id="@+id/url_edit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:ems="10"-->
<!--            android:inputType="textPersonName" />-->

<!--        <TextView-->
<!--            android:id="@+id/user"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="User Name"-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

<!--        <EditText-->
<!--            android:id="@+id/user_edit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:ems="10"-->
<!--            android:inputType="textPersonName" />-->

<!--        <TextView-->
<!--            android:id="@+id/password"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Password"-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

<!--        <EditText-->
<!--            android:id="@+id/password_edit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:ems="10"-->
<!--            android:inputType="textPassword" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <Button
                android:id="@+id/generate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:onClick="toRandomGenerateActivity"
                android:text="@string/button_label_generate" />

            <Button
                android:id="@+id/show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:onClick="switchPasswordVisibility"
                android:text="@string/button_label_show" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/note_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/note_input_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textMultiLine"
                android:hint="@string/title_edittext_notes_optional"
                android:drawableEnd="@drawable/ic_baseline_cancel_24" />
        </com.google.android.material.textfield.TextInputLayout>

<!--        <TextView-->
<!--            android:id="@+id/note"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:text="Note"-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />-->

<!--        <EditText-->
<!--            android:id="@+id/note_edit"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:ems="10"-->
<!--            android:gravity="start|top"-->
<!--            android:inputType="textMultiLine" />-->

        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="68dp">

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/button_label_cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.204"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="72dp"
                android:text="@string/button_label_confirm_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.193"
                app:layout_constraintStart_toEndOf="@+id/cancel"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</ScrollView>