<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordGenerateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <TextView
                android:id="@+id/password_name_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_name_text"
                android:layout_marginStart="@dimen/regular_padding"
                android:layout_marginTop="@dimen/regular_padding"/>

            <EditText
                android:id="@+id/password_name_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/password_name_hint"
                android:singleLine="true"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/password_name_hint"
                android:layout_marginTop="@dimen/regular_padding"
                android:layout_marginEnd="@dimen/regular_padding"/>

            <TextView
                android:id="@+id/user_name_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name_hint"
                android:layout_marginStart="@dimen/regular_padding"
                android:layout_marginTop="@dimen/regular_padding"
                android:layout_below="@+id/password_name_hint"/>

            <EditText
                android:id="@+id/user_name_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/user_name_hint"
                android:singleLine="true"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/user_name_hint"
                android:layout_marginTop="@dimen/regular_padding"
                android:layout_marginEnd="@dimen/regular_padding"/>

            <TextView
                android:id="@+id/password_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_hint"
                android:layout_marginStart="@dimen/regular_padding"
                android:layout_marginTop="@dimen/regular_padding"
                android:layout_below="@+id/user_name_hint"/>

            <EditText
                android:id="@+id/password_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/password_hint"
                android:singleLine="true"
                android:layout_alignParentRight="true"
                android:layout_alignBaseline="@+id/password_hint"
                android:layout_marginTop="@dimen/regular_padding"
                android:layout_marginEnd="@dimen/regular_padding"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_enter"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/password_gen_generate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/regular_padding"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/password_generate_button_label"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/password_gen_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/regular_padding"
                    android:layout_toRightOf="@+id/password_gen_generate"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:text="@string/password_generate_show_button_label"
                    android:textColor="@android:color/white" />
            </LinearLayout>


            
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>