<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/serviceRecordView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_centerHorizontal="true"
    android:background="#fff">

    <View
        android:id="@+id/expand_seperator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:background="#dddddd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <TextView
                android:id="@+id/username_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/expand_seperator"
                android:layout_alignParentLeft="true"
                android:paddingLeft="20dp"
                android:text="@string/Username"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/username_label"
                android:layout_alignParentLeft="true"
                android:paddingLeft="20dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/password_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/username"
                android:layout_alignParentLeft="true"
                android:paddingLeft="20dp"
                android:text="@string/Password"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/password_label"
                android:layout_alignParentLeft="true"
                android:paddingLeft="20dp"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/note_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/password"
                android:layout_alignParentLeft="true"
                android:paddingLeft="20dp"
                android:text="@string/Note"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/note_label"
                android:layout_alignParentLeft="true"
                android:paddingLeft="20dp"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/clip_copy"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/copy_clipboard" />

        <View
            android:layout_width="16dp"
            android:layout_height="match_parent" />
    </LinearLayout>


</RelativeLayout>